[gd_scene load_steps=10 format=3 uid="uid://e4q0q0byc1ni"]

[ext_resource type="Script" uid="uid://bw4s85j6ci4y3" path="res://Scenes/extra_window.gd" id="1_nl6hp"]
[ext_resource type="Texture2D" uid="uid://crfv8uyc2jumf" path="res://Assets/Images/x-mark-24.png" id="2_08vnm"]
[ext_resource type="StyleBox" uid="uid://dgxfwqw34l3e0" path="res://Themes/default_stylebox.tres" id="2_hgq0r"]
[ext_resource type="Texture2D" uid="uid://dohubpls5rx2l" path="res://Assets/Images/icons8-move-50.png" id="3_dghav"]
[ext_resource type="Theme" uid="uid://e05cfjppal74" path="res://Assets/Themes/Default.tres" id="4_tns7o"]
[ext_resource type="FontFile" uid="uid://cwk3vsfb0qprq" path="res://Assets/Fonts/Lato-BlackItalic.ttf" id="5_51tso"]
[ext_resource type="FontFile" uid="uid://bt3trnspmwel0" path="res://Assets/Fonts/Lato-Regular.ttf" id="6_51tso"]
[ext_resource type="FontFile" uid="uid://dgwowtscbpkq8" path="res://Assets/Fonts/Lato-Bold.ttf" id="7_3n4xg"]
[ext_resource type="Texture2D" uid="uid://d1yb0n67qcd7o" path="res://Assets/Images/heart.svg" id="8_3n4xg"]

[node name="ExtraWindow" type="Window"]
transparent_bg = true
oversampling_override = 1.0
title = "SkyExtras"
size = Vector2i(448, 256)
unresizable = true
borderless = true
always_on_top = true
transparent = true
script = ExtResource("1_nl6hp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 448.0
offset_bottom = 256.0

[node name="Background" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 440.0
offset_bottom = 248.0
theme_override_styles/panel = ExtResource("2_hgq0r")

[node name="CloseButton" type="TextureButton" parent="Control/Background"]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_08vnm")

[node name="DragButton" type="TextureButton" parent="Control/Background"]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
layout_mode = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 98.0
offset_bottom = 58.0
texture_normal = ExtResource("3_dghav")

[node name="TitleLabel" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 112.0
offset_top = 8.0
offset_right = 316.0
offset_bottom = 58.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("5_51tso")
theme_override_font_sizes/font_size = 41
text = "SkyExtras"
horizontal_alignment = 1

[node name="createdby" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 279.0
offset_top = 115.0
offset_right = 415.0
offset_bottom = 147.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("6_51tso")
theme_override_font_sizes/font_size = 26
text = "created by"
horizontal_alignment = 1

[node name="bctix" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 339.0
offset_top = 146.0
offset_right = 411.0
offset_bottom = 178.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("7_3n4xg")
theme_override_font_sizes/font_size = 26
text = "bctix"
horizontal_alignment = 1

[node name="powered" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 270.0
offset_top = 181.0
offset_right = 406.0
offset_bottom = 213.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("6_51tso")
theme_override_font_sizes/font_size = 26
text = "powered by"
horizontal_alignment = 1

[node name="godot" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 333.0
offset_top = 207.0
offset_right = 405.0
offset_bottom = 239.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("7_3n4xg")
theme_override_font_sizes/font_size = 26
text = "godot"
horizontal_alignment = 1

[node name="Heart" type="Sprite2D" parent="Control/Background"]
self_modulate = Color(0.8980392, 0.8901961, 0.8117647, 1)
position = Vector2(323, 228)
scale = Vector2(0.6182461, 0.6182461)
texture = ExtResource("8_3n4xg")

[node name="24hr_label" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 17.0
offset_top = 80.0
offset_right = 143.0
offset_bottom = 112.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("7_3n4xg")
theme_override_font_sizes/font_size = 26
text = "24hr mode"
horizontal_alignment = 1

[node name="24hr_toggle" type="CheckButton" parent="Control/Background/24hr_label"]
layout_mode = 0
offset_left = 128.0
offset_top = 6.0
offset_right = 172.0
offset_bottom = 30.0

[node name="version" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 12.0
offset_top = 215.0
offset_right = 106.0
offset_bottom = 241.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("6_51tso")
theme_override_font_sizes/font_size = 16
text = "version: 0.0.0"
horizontal_alignment = 1

[node name="funnybutton" type="TextureButton" parent="Control/Background"]
layout_mode = 0
offset_left = 369.0
offset_top = 18.0
offset_right = 409.0
offset_bottom = 58.0

[node name="color_label" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 18.0
offset_top = 150.0
offset_right = 144.0
offset_bottom = 182.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("7_3n4xg")
theme_override_font_sizes/font_size = 26
text = "main color"
horizontal_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Control/Background/color_label"]
layout_mode = 0
offset_left = 136.0
offset_top = 4.0
offset_right = 163.0
offset_bottom = 31.0
edit_alpha = false

[node name="reset_color" type="Button" parent="Control/Background/color_label"]
layout_mode = 0
offset_left = 4.0
offset_top = 30.0
offset_right = 52.0
offset_bottom = 61.0
text = "reset"

[node name="notif_label" type="Label" parent="Control/Background"]
layout_mode = 0
offset_left = 17.0
offset_top = 115.0
offset_right = 163.0
offset_bottom = 147.0
theme = ExtResource("4_tns7o")
theme_override_fonts/font = ExtResource("7_3n4xg")
theme_override_font_sizes/font_size = 26
text = "notifications"
horizontal_alignment = 1

[node name="notif_toggle" type="CheckButton" parent="Control/Background/notif_label"]
layout_mode = 0
offset_left = 147.0
offset_top = 7.0
offset_right = 191.0
offset_bottom = 31.0

[connection signal="pressed" from="Control/Background/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="button_down" from="Control/Background/DragButton" to="." method="_on_drag_button_button_down"]
[connection signal="button_up" from="Control/Background/DragButton" to="." method="_on_drag_button_button_up"]
[connection signal="toggled" from="Control/Background/24hr_label/24hr_toggle" to="." method="_on_hr_toggle_toggled"]
[connection signal="pressed" from="Control/Background/funnybutton" to="." method="_on_funnybutton_pressed"]
[connection signal="color_changed" from="Control/Background/color_label/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="Control/Background/color_label/reset_color" to="." method="_on_reset_color_pressed"]
[connection signal="toggled" from="Control/Background/notif_label/notif_toggle" to="." method="_on_notif_toggle_toggled"]
